Overflow fix in card edit description box

--- a/app/project-page/project-page.css
+++ b/app/project-page/project-page.css
@@ -71,6 +71,13 @@
     color: gray;
 }
 
+.is-overflow {
+  overflow-y: scroll;
+}
+.no-overflow {
+  overflow-y: hidden;
+}
+
 /* Scrollbar stuff */
 /*
 ::-webkit-scrollbar {
